# CppTask

./: README.md
CppTask/: build.gradle  local.properties  settings.gradle
CppTask/app/: build.gradle
CppTask/app/src/androidTest/java/com/example/cpptask/: ExampleInstrumentedTest.java
CppTask/app/src/main/: AndroidManifest.xml
CppTask/app/src/main/cpp/: AbstractModel.h  CMakeLists.txt  Model2D.cpp  Model2D.h  Renderer.cpp  Renderer.h  native-lib.cpp
CppTask/app/src/main/cpp/Delaunator/: CMakeLists.txt  Delaunator.cpp  Delaunator.h  var.h
CppTask/app/src/main/java/com/example/cpptask/: MainActivity.java
CppTask/app/src/main/res/layout/: activity_main.xml
CppTask/app/src/main/res/values/: strings.xml
CppTask/app/src/test/java/com/example/cpptask/: ExampleUnitTest.java
CppTask/gradle/wrapper/: gradle-wrapper.properties
